# fix-my-boot

./: .gitignore  Cargo.toml  README.md  build-appimage.sh
src/: common.rs  main.rs  reinstall_bootloader.rs  tests.rs
src/fixing/: list_roots.rs  mod.rs
