[package]
name = "fix-my-boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0"
regex = "^1.5"
serde_json = "^1.0"
serde = {version = "^1.0", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.3"

[[bin]]
name = "fix-my-boot"
path = "src/main.rs"

[[bin]]
name = "reinstall-bootloader"
path = "src/reinstall_bootloader.rs"

[package.metadata.appimage]
auto_link = true
assets = ["target/release/reinstall-bootloader"]